feat: add stt serve
