# backend/app/api/v1/router.py
@@ -2,11 +2,13 @@ from fastapi import APIRouter
 
 from app.api.v1.endpoints import (
     auth,
+    chat,
     meeting_participants,
     meetings,
     recordings,
     team_members,
     teams,
+    transcripts,
     webrtc,
 )
 
@@ -20,3 +22,5 @@ api_router.include_router(meetings.router)
 api_router.include_router(meeting_participants.router)
 api_router.include_router(webrtc.router)
 api_router.include_router(recordings.router)
+api_router.include_router(transcripts.router)
+api_router.include_router(chat.router)
